# strigiclient

./: CMakeLists.txt
lib/: CMakeLists.txt
lib/htmlgui/: strigihtmlgui.cpp
lib/searchclient/: cmdlinestrigi.cpp  searchview.cpp
